deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addwebpage-deploy
  labels:
    app: addwebpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addwebpage
  template:
    metadata:
      labels:
        app: addwebpage 
    spec:
      containers:
      - name: addwebpage
        image: eu.gcr.io/proyectokubernetes-301509/addwebpage:latest
        ports:
        - containerPort: 8081
