deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addwebpage-service
  labels:
    app: addwebpage
spec:
  selector:
    app: addwebpage 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8081
    nodePort: 31110
