deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addwebpage-ingress
  labels:
    app: addwebpage
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: addwebpage-service
            port:
              number: 5000
